--- a/escolar/core/templates/base_aluno.html
+++ b/escolar/core/templates/base_aluno.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-tabs">
   {% if escola.id %}
     {% if aluno.pk %}
-      <li class="{{ tab_aluno }}"><a href="{% url 'aluno_form' escola.pk aluno.pk %}" id='id_escola'>Ficha de Matrícula</a></li>
+      <li class="{{ tab_aluno }}"><a href="{% url 'aluno_form' escola.pk aluno.pk %}" id='id_escola'>Aluno</a></li>
       <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'membros_familia_list' aluno.id %}">Responsáveis</a></li>
       <li class="{{ tab_autorizados_aluno }}"><a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}">Autorizados</a></li>
       <!--     <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
