--- a/escolar/escolas/templates/escolas/autorizado_form.html
+++ b/escolar/escolas/templates/escolas/autorizado_form.html
@@ -33,7 +33,7 @@
           </div>
         <div class="form-actions">
           <input type="submit" value="Salvar" class="btn btn-primary">
-            <a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}" class="btn btn-secondary">Cancelar</a>
+            <a href="{% url 'autorizados_aluno_list' aluno.id %}" class="btn btn-secondary">Cancelar</a>
        </div>
       </div>
     </form>
