--- a/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
+++ b/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
@@ -33,6 +33,7 @@
               <th>Nome</th>
               <th>Aluno</th>
               <th>Status</th>
+              <th>Quem autorizou</th>
               <th>Data</th>
           </tr>
         </thead>
@@ -41,13 +42,14 @@
         {% for autorizado in autorizados %}
           <tr>
             {% if can_edit %}
-              <td><a href="{% url 'autorizado_form' aluno.pk autorizado.pk %}">{{ autorizado.autorizado.nome }}</a></td>
+              <td><a href="{% url 'autorizado_form' aluno.pk autorizado.autorizado.pk %}">{{ autorizado.autorizado.nome }}</a></td>
             {% else %}
               <td>{{ autorizado.autorizado.nome }}</td>
             {% endif %}
             <td>{{ autorizado.aluno|default:'--' }}</td>
             <td>{{ autorizado.status|yesno:'Autorizado,--' }}</td>
-            <td>{{ autorizado.data|date:'d/m/Y' }}</td>
+            <td>{{ autorizado.responsavel }}</td>
+            <td>{{ autorizado.data|date:"d/m/Y" }} - {{ autorizado.data|time:"H:i" }}</td>
           </tr>
         {% empty %}
         <tr>
