ref #36 cria o template views urls do aluno_cadastro, troca os redirecionamentos pos save do aluno para o cadastro que é somente leitura; da listagem de alunos vai para o cadastro do aluno

--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -57,7 +57,7 @@
         {% for aluno in object_list %}
           <tr>
             {% if can_edit or user.id == aluno.user.id %}
-              <td><a href="{% url 'aluno_form' escola.id aluno.id %}">{{ aluno.nome }}</a></td>
+              <td><a href="{% url 'aluno_cadastro' aluno.id %}">{{ aluno.nome }}</a></td>
             {% else %}
               <td>{{ aluno.nome }}</td>
             {% endif %}
