ref #39 cadastro e edição de contratos funcionando; precisa de melhorias, por exemplo: se já tem um contrato ref ano corrente, não deixar criar outro ...

--- a/escolar/financeiro/templates/financeiro/contrato_cadastro.html
+++ b/escolar/financeiro/templates/financeiro/contrato_cadastro.html
@@ -25,13 +25,13 @@
           <p><b>Responsável</b>: {{ contrato.responsavel.nome }}</p>
           <p><b>Aluno</b>: {{ contrato.aluno.nome }}</p>
           <p><b>Série</b>: {{ contrato.serie }}</p>
-          <p><b>Valor do contrato:</b>: >R$ {{ contrato.valor }}</p>
-          <p><b>Data de assinatura:</b>: {{ contrato.data_assinatura|date:"d/m/Y" }}</p>
+          <p><b>Valor do contrato</b>: R$ {{ contrato.valor }}</p>
+          <p><b>Data de assinatura</b>: {{ contrato.data_assinatura|date:"d/m/Y" }}</p>
         </div>
         <div class="col-md-4">
           <h3>Condições</h3>
-          <p><b>Número de parcelas:</b>:{{ contrato.nr_parcela }}</p>
-          <p><b> Desconto:</b>: {{ contrato.desconto }} (%)</p>
+          <p><b>Número de parcelas</b>:{{ contrato.nr_parcela }}</p>
+          <p><b> Desconto</b>: {{ contrato.desconto }} (%)</p>
           <p><b>matricula nr</b>: {{ contrato.matricula_nr|default:"--" }}</p>
           <p><b>matricula valor</b>: {{ contrato.matricula_nr|default:"--" }}</p>
         </div>
@@ -44,9 +44,9 @@
         {% if can_edit %}
         <br>
           <div class="form-actions">
-            <a href="" class="btn btn-mini btn-success">Editar</a>
-             <a href="{% url 'contratos_aluno_list' aluno.id %}" class="btn btn-secondary" title="Voltar para a listagem...">Contratos do aluno</a>
-            <a href="{% url 'contratos_list' escola.id %}" class="btn btn-secondary" title="Voltar para a listagem...">Listagem geral</a>
+            <a href="{% url 'contrato_edit' aluno.id contrato.id %}" class="btn btn-mini btn-success">Editar</a>
+             <a href="{% url 'contratos_aluno_list' aluno.id %}" class="btn btn-secondary" title="Voltar para a listagem de contratos do aluno">Contratos do aluno</a>
+            <a href="{% url 'contratos_list' escola.id %}" class="btn btn-secondary" title="Voltar para a listagem de Contratos">Listagem de todos contratos</a>
           </div>
         {% endif %}
   </div>
