--- a/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
@@ -18,6 +18,13 @@
   <div class="row-fluid span10">
     {% include "base_aluno.html" %}
     <table class="table table-striped">
+      {% if can_edit %}
+        <caption>
+           <div style="float:right; margin-right:10px">
+              <a href="{% url 'contrato_form' aluno.id %}" class="btn btn-mini btn-success">Novo Contrato</a>
+           </div>
+        </caption>
+      {% endif %}
       <thead>
         <tr>
           <th>Contrato Ano</th>
