--- a/escolar/core/templates/pagination.html
+++ b/escolar/core/templates/pagination.html
@@ -1,7 +1,7 @@
 <!-- ref #30: recebe obrigatoriamente: 'object_list' -->
 <ul class="pagination">
   {% if object_list.has_previous %}
-    <li><a href="?page={{ object_list.previous_page_number }}">&laquo;</a></li>
+    <li><a href="?page={{ object_list.previous_page_number }}&{{ parameters }}">&laquo;</a></li>
   {% else %}
     <li class="disabled"><span>&laquo;</span></li>
   {% endif %}
@@ -9,11 +9,11 @@
     {% if object_list.number == i %}
       <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
     {% else %}
-      <li><a href="?page={{ i }}">{{ i }}</a></li>
+      <li><a href="?page={{ i }}&{{ parameters }}">{{ i }}</a></li>
     {% endif %}
   {% endfor %}
   {% if object_list.has_next %}
-    <li><a href="?page={{ object_list.next_page_number }}">&raquo;</a></li>
+    <li><a href="?page={{ object_list.next_page_number }}&{{ parameters }}">&raquo;</a></li>
   {% else %}
     <li class="disabled"><span>&raquo;</span></li>
   {% endif %}
