ref #44 corrige page inicial para 1

--- a/escolar/core/templates/core/perfis_list.html
+++ b/escolar/core/templates/core/perfis_list.html
@@ -60,7 +60,9 @@
         {% endfor %}
         </tbody>
     </table>
-    {% include 'pagination.html' %}
+    {% if object_list.has_other_pages %}
+      {% include 'pagination.html' %}
+    {% endif %}
   </div>
 </div>
 
