--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -28,6 +28,7 @@
       <div class="form-group">
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.efet %}
+        {% bootstrap_field form.titulo %}
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
