ref #41 criação e edição de pagamento com contrato; a criação, deve ser restrito somente a ano corrente. TODO esconder o botão 'Novo Pagamento' quando tiver ano divergente na listagem

--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -29,9 +29,17 @@
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.efet %}
         {% bootstrap_field form.titulo %}
+
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
+      {% if can_edit %}
+      <caption>
+       <div style="float:right; margin-right:10px">
+        <a href="{% url 'pagamento_contrato_form' escola.id contrato.id %}" class="btn btn-mini btn-success">Novo Pagamento</a>
+       </div>
+      </caption>
+    {% endif %}
     </form>
     <table class="table table-striped">
     <thead>
@@ -50,7 +58,7 @@
       <tr class="{{ pagamento.get_context_alert }}">
         <td>
           {% if can_edit %}
-          <a href="">{{ pagamento.titulo|default:'--' }}</a>
+          <a href="{% url 'pagamento_edit' escola.id pagamento.id %}">{{ pagamento.titulo|default:'--' }}</a>
           {% else %}
             {{ pagamento.titulo|default:'--' }}
           {% endif %}
