--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%}
 {% load bootstrap3 %}
+{% load numberformat_br %}
 {% block css %}
   <style type="text/css">
     #id_serie, #id_ano {
@@ -66,8 +67,8 @@
         </td>
         <td>{{ pagamento.data_prevista|date:'d/m/Y' }}</td>
         <td>{{ pagamento.data_pag|date:'d/m/Y'|default:"--" }}</td>
-        <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|default:"--" }} {{ pagamento.get_tipo_display }}</font></td>
-        <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor_pag|default:"--" }}</font></td>
+        <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br|default:"--" }} {{ pagamento.get_tipo_display }}</font></td>
+        <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor_pag|numberformat_br|default:"--" }}</font></td>
         <td>{{ pagamento.contrato.responsavel.nome }}/<br>{{ pagamento.contrato.aluno.nome }}</td>
         <td>{{ pagamento.efet|yesno:'Pago,Em Aberto' }}</td>
       </tr>
