ref #46 ajax seta pgto pago na listagem de pagamentos 'geral': TODO setar valor pago; quem pagou, quem atuzlizou, data e hora

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -70,7 +70,20 @@
         <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br|default:"--" }} {{ pagamento.get_tipo_display }}</font></td>
         <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor_pag|numberformat_br|default:"--" }}</font></td>
         <td>{{ pagamento.contrato.responsavel.nome }}/<br>{{ pagamento.contrato.aluno.nome }}</td>
-        <td>{{ pagamento.efet|yesno:'Pago,Em Aberto' }}</td>
+        <td>
+          {% if pagamento.efet %}
+              Pago: <span class="glyphicon glyphicon-ok-circle" style="color:green"></span>
+            {% else %}
+              <label>
+                <input type="checkbox"
+                       id="{{ pagamento.id }}"
+                       value="pagamento_{{ pagamento.id }}"
+                       name="set_status"
+                       onchange="set_pagamento_status(this)" 
+                       > Pagar
+              </label>
+            {% endif %}
+        </td>
       </tr>
     {% empty %}
     <tr>
@@ -86,4 +99,17 @@
 
 {% endblock content %}
 {% block extra_js %}
+   <script type="text/javascript">
+    function set_pagamento_status(field){
+      if($(field).is(':checked')){
+        var pagamento_id = $(field).attr('id')
+        alert(pagamento_id)
+        // Zero: 0, é um id válido
+        // não quebra a url ao carregar a página
+        $.get("{% url 'set_pagamento_status' 0 %}".replace('0', pagamento_id), function(){
+          location.reload();
+          });
+        }      
+      }
+  </script>
 {% endblock extra_js%}
